# ContactMechanics

./: .check_mufft_capabilities.py  .check_mugrid_capabilities.py  .check_netcdf_capabilities.py  .gitattributes  .gitignore  .install_parallel_netcdf.sh  .travis.before_install.bash  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog.md  LICENSE.md  MANIFEST.in  MPI_testrunner.py  README.md  ToDo.md  conftest.py  contributing.html  development.html  env.sh  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  run-tests.py  search.html  searchindex.js  setup.cfg  setup.py  testing.html  usage.html
ContactMechanics/: ChangeLog.md  DiscoverVersion.py  FFTElasticHalfSpace.py  Factory.py  PipelineFunction.py  PlasticSystemSpecialisations.py  Substrates.py  Systems.py  Version.py  __init__.py  test_surface_topography.py
PyCo/: ChangeLog.md  __init__.py  _version.py
PyPyContact/: __init__.py
Topography/: ImportTest.py
_modules/: index.html
_sources/: development.rst.txt  installation.rst.txt  testing.rst.txt  usage.rst.txt
_static/: documentation_options.js
c/: PyCo_module.cpp  autocorrelation.c  autocorrelation.cpp  autocorrelation.h  bicubic.cpp  bicubic.h  patchfinder.cpp  patchfinder.h  stack.h  test_stack.cpp
commandline/: elasticplot.plg  hard_wall.py  plasticplot.plg  plot.plg  plotacf.py  plotmap.py  plotpsd.py  printrms.py  soft_wall.py
docs/: Makefile  conf.py  contributing.rst  development.rst  index.rst  installation.rst  make.bat  testing.rst  usage.rst
examples/: Hardwall_Simulation.ipynb  adhesive_plastic_simulation_cone.ipynb  bicubic_interpolation.py  check_examples.sh  constrained_conjugate_gradients.ipynb  contact_area_analysis.py  decoupling.py  dual_conjugate_gradient_1d.ipynb  dugdale.py  easy_hardwall_simulation.ipynb  eval_drep.py  files_xy_width_heights.ipynb  finite_thickness.ipynb  hard_wall.py  hardwall_adhesion_custom.py  hertz_dual_pk_vs_withoutrestart.py  hertz_primal_vs_dual.py  howto_plot_2D_data.ipynb  moving_contact.py  plastic_simulation_cone.ipynb  plot_area_vs_load.py  plot_greens_function.py  run_examples.sh  simple_polonsky_keer.py  soft_wall.py  test_examples.py
helpers/: CGDugdale_Demo.ipynb  CGDugdale_playground.ipynb  DistributedClient.py  DistributedServer.py  HurstEstimationNumerics.py  HurstEstimationSymbolics.py  LBFGS_convergence_randomly_rough_scipy_vs_NuMPI.py  LBFGS_convergence_smoothball_scipy_vs_NuMPI.py  LBFGS_scipy_vsNuMPI.py  PotentialHelper.py  PowerSpectrumSymbolics.py  ProfileBart.ipynb  RepulsiveSystemProfileExample.py  SplineHelper.py  SurfAnalysisHelper.py  SurfaceParameterRecovery.py  SurfaceParameterSizeIndependence.py  Symbolic_Augmented_Lagrangian.ipynb  Testing_NewtonConfidenceRegion.ipynb  Testing_Newton_linesearch.ipynb  Testing_augmented_Lagrangian.ipynb  Testing_augmented_Lagrangian.py  VdW_Spline.py  WindowTest.py  accelerated_gradient_projection.ipynb  hysteresis.py  hysteresis_simple_smooth.py  influence_maxcor.py  l_bfgs_b_test.py  pyco_to_standard_obj.py  simple_smooth.py  smoothcontact_performance.py  unstable_traction.py
long_tests/: test_bugnicourt_bench_reduced.py  test_constrained_conjugate_gradients.py  test_generic_cg_elastic.py
maintenance/: copyright.py  replace_header.py  update_license_headers.sh
notes/: biblio.bib
referenceSolutions/: Cone.ipynb  Cone.py
singularity/: README.md  customenv.def  dep_mpi.def  dep_openmpi-4.0.2-gcc-9.def  dep_pnetcdf_openmpi-4.0.2-gcc-9.def  dep_serial.def  openmpi-4.0.2-gcc-9.def  pnetcdf_openmpi-4.0.2-gcc-9.def  pyco_mpi.def  pyco_openmpi-4.0.2-gcc-9.def  pyco_serial.def
snippets/: eval_drep.py
source/: ContactMechanics.CommandLineInterface.html  ContactMechanics.GreensFunctions.html  ContactMechanics.IO.html  ContactMechanics.Optimization.html  ContactMechanics.ReferenceSolutions.html  ContactMechanics.ScanningProbe.html  ContactMechanics.Tools.html  ContactMechanics.html  modules.html
temp/: .print_netcdf_capabilities.sh  CONTRIBUTING.md  env.sh  pytest.ini  requirements.txt
test/: _test_mpi_westergaard.py  _test_parallel_testing.py  conftest.py  test_both_cg.py  test_bugnicourt_nonperiodic.py  test_ccg_without_restart_nonperiodic.py  test_cg.py  test_coding_convention.py  test_contact_area_analysis.py  test_distance_map.py  test_fft_elastic_half_space.py  test_flat_punch.py  test_generic_cg.py  (+14 more)
(+416 files in other folders)
