[build-system]
requires = ["flit_core>=3.2", "DiscoverVersion"]
build-backend = "flit_core.buildapi"

[project]
name = "ContactMechanics"
description = "Efficient contact mechanics using elastic half-space methods"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Till Junge", email = "till.junge@altermail.ch" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
    { name = "Antoine Sanner", email = "antoine.sanner@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]
dependencies = [
    "DiscoverVersion",
    "numpy",
    "scipy>=1.9.0",
    "NuMPI>=0.5.0",
    "muFFT>=0.91.2",
    "SurfaceTopography>=1.14.0",
    "netCDF4"
]

[project.optional-dependencies]
test = [
    "flake8<8",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "runtests"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst_nb",
    "numpydoc"
]

[project.urls]
documentation = "https://contactengineering.github.io/ContactMechanics/"
repository = "https://github.com/ContactEngineering/ContactMechanics"
changelog = "https://github.com/ContactEngineering/ContactMechanics/blob/master/ContactMechanics/ChangeLog.md"

[project.scripts]
ce_hard_wall = "ContactMechanics.CommandLineInterface.HardWall:main"
